<resources>
    <string name="app_name">Hagfish</string>
    <string name="author">Sam Brookes</string>
    <string name="github">sjb-ch1mp</string>
    <string name="date">Dec 2019</string>
    <string name="version">0.1</string>

    <!--Log-in Screen Prompts-->
    <string name="login_enter_pw">ENTER YOUR PASSWORD\n{remaining_attempts} ATTEMPTS REMAINING</string>
    <string name="login_wrong_pw">INCORRECT PASSWORD\n{remaining_attempts} ATTEMPTS REMAINING</string>
    <string name="login_first_time">WELCOME TO HAGFISH\nENTER A PASSWORD TO BEGIN</string>
    <string name="login_attempts_exceeded">TOO MANY ATTEMPTS\nALL ACCOUNTS HAVE BEEN DELETED</string>
    <string name="login_blank_password">PASSWORD CANNOT BE BLANK</string>

    <!--AccountViewActivity General-->
    <string name="title_activity_account_viewer">AccountViewerActivity</string>
    <string name="ava_first_time">Add an account</string>

    <!--Main Toolbar Options-->
    <string name="toolbar_new_account">New Account</string>
    <string name="toolbar_destroy_vault">Burn Vault</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_change_password">Change Password</string>
    <string name="toolbar_logout">Log Out</string>

    <!--Account Toolbar Options -->
    <string name="account_name_change">Change Account Name</string>
    <string name="account_gen_new">Generate New Account Password</string>
    <string name="account_change_pw">Change Account Password</string>
    <string name="account_change_un">Change Account User Name</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_pw_params">Set Password Parameters</string>
    <string name="account_pw_undo">Restore Previous Password</string>

    <!--Dialog Strings-->
    <string name="dialog_new_account">New Account</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_user_name">User Name</string>
    <string name="dialog_password">Password</string>
    <string name="dialog_account_name">Account Name</string>
    <string name="dialog_fields_required">You must enter an account and user name</string>
    <string name="dialog_login_attempts">Login Attempts</string>
    <string name="dialog_idle_timer">Idle Time (min)</string>
    <string name="dialog_password_timer">Show Password (sec)</string>
    <string name="dialog_new_un">New User Name</string>
    <string name="dialog_new_acc_pw">New Account Password</string>
    <string name="dialog_new_hf_pw">New Hagfish Password</string>
    <string name="dialog_user_updated">User name updated</string>
    <string name="dialog_acc_pw_updated">Account password updated</string>
    <string name="dialog_hf_pw_updated">Hagfish password updated</string>
    <string name="dialog_hf_pw_same">Passwords are the same</string>
    <string name="dialog_new_name">New Account Name</string>
    <string name="dialog_account_name_changed">Account name updated</string>
    <string name="dialog_account_font">Font</string>
    <string name="dialog_font_example">EXAMPLE example 1234567890</string>
    <string name="dialog_params_len">Password Length</string>
    <string name="dialog_params_lc">Lower Case Letters</string>
    <string name="dialog_params_uc">Upper Case Letters</string>
    <string name="dialog_params_num">Numbers</string>
    <string name="dialog_params_esc">Special Characters</string>
    <string name="dialog_params_lsc">Specify Characters</string>

    <!--Warning Strings-->
    <string name="warning_account_exists">Account already exists</string>
    <string name="warning_log_out">If you continue, you will be logged out</string>
    <string name="warning_delete_account">If you continue, this account will be deleted</string>
    <string name="warning_burn_vault">If you continue, all accounts will be deleted</string>
    <string name="warning_idle_out">Hagfish has logged out</string>
    <string name="warning_prefs_changed">Settings have been updated</string>
    <string name="warning_un_same">User names are the same</string>
    <string name="warning_pw_same">Passwords are the same</string>
    <string name="warning_params_all_false">Password parameters must contain at least one character set</string>
    <string name="warning_params_updated">Password parameters have been updated</string>
    <string name="warning_undo_change">If you continue, the previous password will be restored</string>
    <string name="warning_pw_restored">Previous password has been restored</string>
    <string name="warning_no_prev_pw">Account does not have a previous password saved</string>

    <!--About String-->
    <string name="about_title">Hagfish</string>
    <string name="about_author">author</string>
    <string name="about_github">github</string>
    <string name="about_version">version</string>
    <string name="about_date">date</string>

</resources>
