<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.25"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_password_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_len"
            android:textSize="12sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_password_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="39"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/params_seekbar_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.50"
            android:fontFamily="@font/anonymous_pro"
            android:gravity="left"
            android:paddingTop="5dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_lc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_lc"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_lc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_uc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="12sp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_uc"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_uc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_nums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_num"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_nums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_esc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_esc"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_esc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lsc_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/params_lsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anonymous_pro"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_params_lsc"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_lsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint=""
            android:inputType="textPersonName"
            android:textSize="12sp" />


    </LinearLayout>

</LinearLayout>
