<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_settings_login_attempts"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_login_attempts"
            android:textStyle="bold"
            app:fontFamily="@font/geo" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:text=" 1"
            app:fontFamily="@font/geo" />

        <SeekBar
            android:id="@+id/seekBar_login_attempts"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="9"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="5dp"
            android:text="10"
            app:fontFamily="@font/geo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_settings_password_timer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_password_timer"
            android:textStyle="bold"
            app:fontFamily="@font/geo" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:text=" 1"
            app:fontFamily="@font/geo" />

        <SeekBar
            android:id="@+id/seekBar_password_timer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="5dp"
            android:text=" 5"
            app:fontFamily="@font/geo" />
        <!-- 1 to 5 seconds -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_settings_idle_timer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/dialog_idle_timer"
            android:textStyle="bold"
            app:fontFamily="@font/geo" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:text=" 1"
            app:fontFamily="@font/geo" />

        <SeekBar
            android:id="@+id/seekBar_idle_timer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="5dp"
            android:text=" 5"
            app:fontFamily="@font/geo" />
        <!-- 1 to 5 minutes -->

    </LinearLayout>
</LinearLayout>